hphp/test/zend/good/ext/mysqli/tests/mysqli_thread_safe.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
?>