hphp/test/zend/bad/ext/ftp/tests/002.php.skipif
<?php
$ssl = 1;
require 'skipif.inc';
?>